syntax = "proto3";

package wellknown.v1;

import "did/v1/document.proto";

option go_package = "github.com/trevatk/tbd/lib/protocol/wellknown/v1";

service WellKnownService {
  rpc GetDIDConfiguration(GetDIDConfigurationRequest) returns (GetDIDConfigurationResponse) {}
}

message GetDIDConfigurationRequest {}

message GetDIDConfigurationResponse {
  did.v1.Document doc = 1;
}
